--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.12",
+    "@react-navigation/native-stack": "^7.1.8",
+    "connect": "^3.7.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^4.14.0",
-    "@react-navigation/native": "^7.0.12",
-    "@react-navigation/native-stack": "^7.1.8",
     "react-native-screens": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "latest",
     "@react-native/babel-preset": "0.76.5",
     "@react-native/eslint-config": "0.76.5",
     "@react-native/metro-config": "0.76.5",
     "@react-native/typescript-config": "0.76.5",
-    "@react-native-community/cli": "latest",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
